--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -12,6 +12,23 @@ scenes:
   
   channel: |
     Управление каналом ${channelTitle}
+  
+  channels: |
+    Каналы
+
+    Не нашли ваш канал в списке? Попробуйте удалить бота и заново добавить его в канал.
+
+  setupPrice: |
+    Текущая стоимость подписки: ${currentPrice}
+    
+    Чтобы установить или изменить стоимость подписки отправьте цену и валюту.
+
+    Пример: 1.00 TON
+  
+  setupLink: |
+    Текущая ссылка на канал: ${currentLink}
+
+    Чтобы установить или изменить ссылку на канал отправьте новую ссылку.
 
 notifications:
   canManage: |
@@ -21,11 +38,18 @@ notifications:
   notAnOwner: |
     Только владелец канала ${channelTitle} может управлять им в боте.
   joinRequest: |
-    Вы запросили вступление в канал ${channelTitle}.
+    Вы запросили подписку в канал ${channelTitle}.
   noAccessToChannel: |
     Бот больше не имеет доступа к данному каналу.
   canNotActivate: |
-    Данный канал не может быть активирован. Пожалуйста, установите стоимость подписки, валюту и ссылку на канал.
+    Данный канал не может быть активирован. Пожалуйста, установите стоимость подписки и ссылку на канал.
+  notSetup: Не установлено.
+  priceUpdated: |
+    Стоимость подписки обновлена до ${price} ${currency}.
+  linkUpdated: |
+    Ссылка на канал обновлена на ${link}.
+  subscriptionApproved: |
+    Вы успешно оформили подписку на канал <a href="${channelLink}">${channelTitle}</a>.
 
 buttons:
   back: Назад
@@ -34,4 +58,8 @@ buttons:
   settings: Настройки
   language: Язык
   manage: Управление
-  paySubscription: Оплатить подписку
+  paySubscription: Оплатить подписку — ${price} ${currency}
+  subscriptionPrice: Стоимость подписки
+  channelLink: Ссылка на канал
+  subscriptionActivated: "Подписка: активирована"
+  subscriptionDeactivated: "Подписка: деактивирована"
